# care-session-service

./: .coverage  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  caresessions_reports_feedbacks_api-documentation.yml  coverage.xml  docker-compose.yml  permissions.yml  pyproject.toml  requirements.txt  start_consumer.py  test_api.sh
.github/workflows/: deploy.yml
app/: main.py
app/auth/: jwt_verifier.py  middleware.py  models.py  permissions_manager.py
app/care_sessions/: __init__.py  auto_complete.py  event_publisher.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  validators.py
app/db/: base.py  models.py  postgres.py  repository.py
app/feedback/: __init__.py  exceptions.py  models.py  repository.py  router.py  satisfaction.py  schemas.py  service.py
app/messaging/: consumer.py
app/reports/: consumer.py  repository.py  router.py  schemas.py  service.py
app/utils/: timezone.py
k8s/base/: deployment.yaml  deployment.yml  route.yaml  route.yml  service.yaml  service.yml
k8s/config/: configmap.yaml  configmap.yml  secret.yaml
migrations/: 20260105_add_cache_tables.sql
tests/: conftest.py  test_care_sessions.py  test_feedback.py  test_health.py  test_reports.py  test_satisfaction.py
